--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-paper": "^4.11.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.4.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
